force-app/main/default/objects/ZuoraContractPaymentTermMD__mdt/ZuoraContractPaymentTermMD__mdt.object-meta.xml
<CustomObject>
    <label>ZuoraContractPaymentTermMD</label>
    <pluralLabel>ZuoraContractPaymentTermMDs</pluralLabel>
</CustomObject>