force-app/main/default/objects/ZuoraContractPaymentTermMD__mdt/fields/JP_parent_name__c.field-meta.xml
<CustomField>
    <fullName>JP_parent_name__c</fullName>
    <label>JP parent name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gaprise Collections</fullName>
                <default>true</default>
                <label>Gaprise Collections</label>
            </value>
            <value>
                <fullName>Gaprise Direct Contract USD</fullName>
            </value>
            <value>
                <fullName>Gaprise inc.</fullName>
            </value>
            <value>
                <fullName>SW Japan Direct Account</fullName>
            </value>
            <value>
                <fullName>Gaprise Direct Contract JPY</fullName>
            </value>
            <value>
                <fullName>SW Japan Direct Account JPY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>