force-app/main/default/objects/ZuoraContractPaymentTermMD__mdt/fields/Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Payment_Frequency__c</fullName>
    <label>Payment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
                <default>true</default>
                <label>Annual</label>
            </value>
            <value>
                <fullName>Semi-Annual</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Every 2 Years</fullName>
            </value>
            <value>
                <fullName>Every 3 years</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Full Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>