force-app/main/default/objects/ZuoraContractPaymentTermMD__mdt/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <label>Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Due Upon Receipt</fullName>
                <default>true</default>
                <label>Due Upon Receipt</label>
            </value>
            <value>
                <fullName>Net 15</fullName>
            </value>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 45</fullName>
            </value>
            <value>
                <fullName>Net 50</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
            <value>
                <fullName>Net 65</fullName>
            </value>
            <value>
                <fullName>Net 75</fullName>
            </value>
            <value>
                <fullName>Net 90</fullName>
            </value>
            <value>
                <fullName>Net 120</fullName>
            </value>
            <value>
                <fullName>Net 180</fullName>
            </value>
            <value>
                <fullName>EOM + 30</fullName>
            </value>
            <value>
                <fullName>Other (non - Standard)</fullName>
            </value>
            <value>
                <fullName>EOM + 45</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>