force-app/main/default/objects/ZuoraContractPaymentTermMD__mdt/fields/Payment_Term_Contract__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term_Contract__c</fullName>
    <label>Payment Term Contract</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>