force-app/main/default/objects/ZuoraContractPaymentTermMD__mdt/listViews/Japan_wording.listView-meta.xml
<ListView>
    <fullName>Japan_wording</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>JP_parent_name__c</columns>
    <columns>Payment_Term__c</columns>
    <columns>Payment_Type__c</columns>
    <columns>Payment_Term_Contract__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>JP_parent_name__c</field>
        <operation>equals</operation>
        <value>SW Japan Direct Account,SW Japan Direct Account JPY</value>
    </filters>
    <filters>
        <field>JP_parent_name__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Japan wording</label>
</ListView>